--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -22,9 +22,10 @@ navigationFragmentKtx = "2.7.7"
 navigationUiKtx = "2.7.7"
 navigationCommonKtx = "2.7.7"
 
-activityCompose = "1.9.0"
-composeBom = "2024.05.00"
-material3Android = "1.2.1"
+activityCompose = "1.9.3"
+composeBom = "2024.12.01"
+material3Android = "1.3.1"
+androidx-room = "2.6.1"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -66,6 +67,8 @@ androidx-navigation-fragment-ktx = { group = "androidx.navigation", name = "navi
 androidx-navigation-ui-ktx = { group = "androidx.navigation", name = "navigation-ui-ktx", version.ref = "navigationUiKtx" }
 androidx-navigation-common-ktx = { group = "androidx.navigation", name = "navigation-common-ktx", version.ref = "navigationCommonKtx" }
 androidx-material3-android = { group = "androidx.compose.material3", name = "material3-android", version.ref = "material3Android" }
+androidx-room-runtime = { module = "androidx.room:room-ktx", version.ref = "androidx-room" }
+androidx-room-compiler = { module = "androidx.room:room-compiler", version.ref = "androidx-room" }
 
 [plugins]
 daggerKapt = { id = "kotlin-kapt" }
