add clean project

--- a/gradle.properties
+++ b/gradle.properties
@@ -23,8 +23,4 @@ kotlin.code.style=official
 android.nonTransitiveRClass=true
 
 # Debug auth config
-clientId="employee-api-client"
-clientSecret="FJfZx3qNBcZNIPI7rj1iqC65y1HgDvgl"
-grantType="password"
-username="master_test"
-password="master_test"
+apikey="4aiHsXMQiQqNWFulrNPvJfAVxYsdoLRn"
